--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "4"
-          feed_list: "https://dev.to/feed/see, https://medium.com/feed/@realkimmy"
+          feed_list: "https://dev.to/feed/see, https://medium.com/feed/@kimmy214"
           committer_username: "see"
           committer_email: "upcwangying@126.com"
